# nomad

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS.md
src/: app.rs  config.rs  identity.rs  main.rs  node.rs  packet_audit.rs
src/browser/: cache.rs  history.rs  mod.rs
src/conversation/: message.rs  mod.rs  storage.rs
src/network/: client.rs  mod.rs  node_registry.rs  page_request.rs  types.rs
src/tui/: app.rs  browser.rs  browser_view.rs  button.rs  conversations.rs  directory.rs  discovery.rs  link_handler.rs  mod.rs  modal.rs  mynode.rs  network.rs  saved.rs  status_bar.rs  tabs.rs
