[package]
name = "nomad"
version = "0.1.0"
edition = "2021"

[dependencies]
rinse = { path = "../rinse", features = ["tokio"] }
micronaut = { path = "../micronaut", features = ["ratatui"] }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
ratatui = "0.30"
crossterm = "0.29"
tui-input = "0.15"

serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
hex = "0.4"
log = "0.4"
simplelog = "0.12"
rmp-serde = "1.3"
serde_bytes = "0.11"
sha2 = "0.10"
rand = "0.8"
cli-clipboard = "0.4"

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
